--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#1A1A1A"
-        tools:context=".ProfilePage">
+        tools:context=".profile.ProfilePage">
 
         <!-- Profile Header -->
         <TextView
