--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -87,6 +87,7 @@
                     android:textSize="14sp"/>
 
                 <TextView
+                    android:id="@+id/weeklyGoalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="50 km"
@@ -95,6 +96,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/weeklyGoalProgressText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="35 km done"
@@ -102,6 +104,7 @@
                     android:textSize="12sp"/>
 
                 <ProgressBar
+                    android:id="@+id/myProgressBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:max="50"
@@ -110,6 +113,7 @@
                     android:progressDrawable="@drawable/progress_bar_custom"/>
 
                 <TextView
+                    android:id="@+id/weeklyGoalLeftText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="15 km left"
