--- a/app/src/main/res/layout/activity_login_password.xml
+++ b/app/src/main/res/layout/activity_login_password.xml
@@ -4,32 +4,39 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#FFFFFF">
 
         <!-- Logo -->
+
+        <!-- Title -->
+
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_marginTop="64dp"
             android:contentDescription="Logo"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/logo2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Title -->
+        <!-- Email Display -->
         <TextView
             android:id="@+id/passwordTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
             android:text="What’s your password?"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/logo"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/black"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
-        <!-- Email Display -->
         <TextView
             android:id="@+id/emailDisplay"
             android:layout_width="wrap_content"
@@ -48,6 +55,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"
+            android:background="@drawable/rounded_input"
             android:minHeight="48dp"
             app:layout_constraintTop_toBottomOf="@id/emailDisplay"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +69,8 @@
             android:layout_height="wrap_content"
             android:text="Sign In"
             android:minHeight="48dp"
+            android:background="@drawable/rounded_button_black"
+            android:textColor="#FFFFFF"
             app:layout_constraintTop_toBottomOf="@id/passwordEditText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
