--- a/app/src/main/res/layout/activity_login_email.xml
+++ b/app/src/main/res/layout/activity_login_email.xml
@@ -4,32 +4,38 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#FFFFFF">
 
         <!-- Logo -->
+
+        <!-- Title -->
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_marginTop="64dp"
             android:contentDescription="Logo"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/logo2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Title -->
+        <!-- Email Input -->
         <TextView
             android:id="@+id/emailTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter your email to join us or sign in."
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/logo"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
+            android:text="Enter your email to join us\nor sign in."
+            android:textColor="@color/black"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
-        <!-- Email Input -->
         <EditText
             android:id="@+id/emailEditText"
             android:layout_width="0dp"
@@ -37,34 +43,41 @@
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
+            android:background="@drawable/rounded_input"
             app:layout_constraintTop_toBottomOf="@id/emailTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp" />
 
         <!-- Privacy Policy and Terms -->
+
+        <!-- Next Button -->
+
         <TextView
             android:id="@+id/privacyPolicy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="By continuing, I agree to Move Privacy Policy and Terms of Use."
-            android:textSize="12sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/emailEditText"
+            android:layout_marginTop="28dp"
+            android:text="By continuing, I agree to Move\nPrivacy Policy and Terms of Use."
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
-        <!-- Next Button -->
         <Button
             android:id="@+id/nextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/rounded_button_black"
             android:minHeight="48dp"
-            app:layout_constraintTop_toBottomOf="@id/privacyPolicy"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Next"
+            android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/privacyPolicy" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
