--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,40 +18,46 @@
 <!--      layout="@layout/layout_indicators" />-->
 
   <!-- Google Maps fragment -->
+  <!--      android:layout_weight="1"-->
+<!--      tools:context=".MapsActivity" />-->
+<!--    android:layout_width="match_parent"-->
+  <!-- Start/Stop button -->
+
+  <!-- Bottom Navigation View -->
   <fragment
       android:id="@+id/map"
       android:name="com.google.android.gms.maps.SupportMapFragment"
       android:layout_width="0dp"
-      xmlns:map="http://schemas.android.com/apk/res-auto"
       android:layout_height="0dp"
-      app:layout_constraintTop_toBottomOf="@id/container"
       app:layout_constraintBottom_toTopOf="@+id/btnStartStop"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent" />
-<!--      android:layout_weight="1"-->
-<!--      tools:context=".MapsActivity" />-->
-<!--    android:layout_width="match_parent"-->
-  <!-- Start/Stop button -->
+      app:layout_constraintTop_toBottomOf="@id/container"
+      app:layout_constraintVertical_bias="1.0" />
+
   <Button
       android:id="@+id/btnStartStop"
       style="@style/Widget.AppCompat.Button.Borderless.Colored"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="396dp"
+      android:layout_height="49dp"
+      android:background="@drawable/rounded_input"
       android:text="@string/start_label"
       app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent" />
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.493"
+      app:layout_constraintStart_toStartOf="parent" />
 
-  <!-- Bottom Navigation View -->
   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/bottomNavigation"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:background="@color/black"
+      android:layout_width="408dp"
+      android:layout_height="57dp"
+      android:background="@drawable/rounded_button_black"
       app:itemIconTint="@color/navigation_item_color"
       app:itemTextColor="@color/navigation_item_color"
-      app:menu="@menu/bottom_navigation_menu"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      app:menu="@menu/bottom_navigation_menu" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
