--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,24 +5,28 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#FFFFFF">
 
         <!-- Icon or Logo -->
+
+        <!-- Title and Instructions -->
         <ImageView
             android:id="@+id/iconLogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_foreground"
             android:contentDescription="App Logo"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/logo2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.018"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Title and Instructions -->
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="28sp"
             android:text="Now let’s make you a Move Member."
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintTop_toBottomOf="@id/iconLogo"
@@ -69,6 +73,9 @@
             app:layout_constraintWidth_percent="0.5" /> <!-- Menggunakan 50% dari lebar -->
 
         <!-- EditText for Password -->
+        <!-- Menggunakan 85% lebar -->
+
+        <!-- ImageView for Eye Icon (Hide/Show Password) -->
         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="0dp"
@@ -76,12 +83,12 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="12dp"
-            app:layout_constraintTop_toBottomOf="@id/surnameEditText"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/togglePasswordVisibility"
-            app:layout_constraintWidth_percent="0.85" /> <!-- Menggunakan 85% lebar -->
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/surnameEditText"
+            app:layout_constraintWidth_percent="0.85" />
 
-        <!-- ImageView for Eye Icon (Hide/Show Password) -->
         <ImageView
             android:id="@+id/togglePasswordVisibility"
             android:layout_width="44dp"
@@ -92,18 +99,21 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <!-- Password Requirements -->
+
+        <!-- Date of Birth -->
+
         <TextView
             android:id="@+id/passwordRequirements"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Minimum of 8 characters\nUppercase, lowercase letters and one number"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
 
-        <!-- Date of Birth -->
         <EditText
             android:id="@+id/dobEditText"
             android:layout_width="0dp"
@@ -148,6 +158,8 @@
             app:layout_constraintTop_toBottomOf="@id/agreeToTerms"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/rounded_button_black"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
