--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,6 +7,15 @@
         android:layout_height="match_parent">
 
         <!-- Gambar Latar Belakang -->
+
+        <!-- Logo di bagian atas -->
+
+        <!-- Teks LETS MOVE -->
+
+        <!-- Deskripsi -->
+
+        <!-- Tombol Bergabung dan Masuk di bagian bawah kiri dan kanan -->
+
         <ImageView
             android:id="@+id/backgroundImage"
             android:layout_width="0dp"
@@ -15,78 +24,79 @@
             android:src="@drawable/welcome"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <!-- Logo di bagian atas -->
         <ImageView
             android:id="@+id/logoImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_width="101dp"
+            android:layout_height="104dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/logo1"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Teks LETS MOVE -->
         <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="388dp"
             android:text="LETS MOVE"
             android:textColor="@android:color/white"
             android:textSize="32sp"
-            android:textStyle="bold"
+            android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.065"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/logoImage" />
 
-        <!-- Deskripsi -->
         <TextView
             android:id="@+id/subtitleText"
-            android:layout_width="272dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
+            android:layout_width="413dp"
+            android:layout_height="105dp"
+            android:layout_marginTop="4dp"
             android:text="Terlalu cepat untuk berhenti,\nbebaskan langkahmu tanpa batas"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textColor="@android:color/background_light"
+            android:textSize="23sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleText" />
 
-        <!-- Tombol Bergabung dan Masuk di bagian bawah kiri dan kanan -->
         <Button
             android:id="@+id/joinButton"
             android:layout_width="150dp"
             android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded"
-        android:text="BERGABUNG"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/loginButton" />
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="88dp"
+            android:background="@drawable/rounded"
+            android:text="BERGABUNG"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/loginButton"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="150dp"
             android:layout_height="48dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded"
-        android:text="MASUK"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/joinButton" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="88dp"
+            android:background="@drawable/rounded"
+            android:text="MASUK"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/joinButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
